--- a/MyPersonalFinance/src/app/register-page/register-page.component.css
+++ b/MyPersonalFinance/src/app/register-page/register-page.component.css
@@ -6,3 +6,13 @@
 .authentication-card-container {
     min-height: 100vh;
 }
+
+.mat-card{
+    background-color: #F8F7F3;
+    color: #373636;
+}
+
+.mat-raised-button{
+    color: #373636;
+    background-color: #F8F7F3;
+}
