--- a/MyPersonalFinance/src/app/secret/secret.component.html
+++ b/MyPersonalFinance/src/app/secret/secret.component.html
@@ -1,6 +1,3 @@
-<p *ngFor="let item of weather | async">
-  {{ item.date }}: {{ item.temperatureC }}
-</p>
-
+<app-wallet></app-wallet>
 
 <button mat-raised-button color="primary" (click)="logout()">Logout</button>
