--- a/MyPersonalFinance/src/app/wallet/wallet.component.html
+++ b/MyPersonalFinance/src/app/wallet/wallet.component.html
@@ -1,3 +1,5 @@
+<h1>Suas carteiras</h1>
+
 <p *ngFor="let userWallet of userWallets | async">
     {{ userWallet.walletName }}: {{ userWallet.bankName }}: {{ userWallet.totalValue }}
   </p>
