--- a/MyPersonalFinance/src/app/wallet/wallet.component.css
+++ b/MyPersonalFinance/src/app/wallet/wallet.component.css
@@ -1,12 +1,26 @@
 .WalletCards {
     margin: auto;
     width: 50%;
-    /* border: 3px solid #373636;
-    */
-    text-justify: distribute;
+    color: #373636;
     padding: 2px;
 }
 
-.card h1 {
-    color: green;
+p-card[header="Suas carteiras"] {
+    text-align: center;
+    padding: 10px;
+    display: flex; /* Transforma o p-card em um contêiner flexível */
+    justify-content: center; /* Centraliza os filhos horizontalmente */
+}
+
+.wallet{
+    font-weight: bold;
+    align-content: center ;
+    background-color: #ffffff;
+    padding: 10px;
+    max-width: 100%; /* Faz com que o elemento tenha no máximo 100% da largura do contêiner pai */
+    width: 500px; /* Define uma largura específica para o elemento, você pode ajustar conforme necessário */
+}
+
+.wallet h1 {
+    font-weight: bold;
 }
