--- a/MyPersonalFinance/src/app/wallet/wallet.component.html
+++ b/MyPersonalFinance/src/app/wallet/wallet.component.html
@@ -3,21 +3,22 @@
   <p-card header="Suas carteiras">
 
     <tr *ngFor="let userWallet of userWallets | async">
-
       <div class="wallet">
 
         <h1> {{ userWallet.walletName }} </h1>
         <h2> {{ userWallet.bankName }} </h2>
-        <p> valor total Carteira R${{ userWallet.totalValue }}.00 </p>
+        <h2> Patrimonio R${{ userWallet.totalValue }}.00 </h2>
 
     <tr *ngFor="let userStock of userWallet.userStock">
-      <li> sigla: {{ userStock.mnemonic }} </li>
-      <li> cotas: {{ userStock.shares }} </li>
-      <li> valor medio de compra: R${{ userStock.averageValue }}.00 </li>
-      <li> valor medio atual: R${{ userStock.currentValue }} </li>
+
+      <div class="stocks">
+        <p> sigla: {{ userStock.mnemonic }} </p>
+        <p> cotas: {{ userStock.shares }} </p>
+        <p> valor atual R${{ userStock.currentValue }}.00 </p>
+        <p> valor abertura R${{ userStock.averageValue }}.00 </p>
+        <p-divider></p-divider>
+      </div>
     </tr>
-
-    <p-divider></p-divider>
-
 </div>
+<p-divider></p-divider>
 </p-card>
