--- a/MyPersonalFinance/src/app/login-page/login-page.component.html
+++ b/MyPersonalFinance/src/app/login-page/login-page.component.html
@@ -12,11 +12,11 @@
         fxLayoutAlign="center stretch"
       >
         <mat-form-field>
-          <mat-label>Username</mat-label>
+          <mat-label>Nome de usuario</mat-label>
           <input matInput formControlName="username" />
         </mat-form-field>
         <mat-form-field>
-          <mat-label>Password</mat-label>
+          <mat-label>Senha</mat-label>
           <input matInput type="password" formControlName="password" />
         </mat-form-field>
       </form>
@@ -26,7 +26,7 @@
         Login
       </button>
       <button mat-button routerLink="/register" routerLinkActive="active">
-        Don't have an account? Register here.
+        Ainda não tem uma conta? Registre aqui!
       </button>
     </mat-card-actions>
   </mat-card>
