feat: add form validators

--- a/MyPersonalFinance/src/app/register-page/register-page.component.css
+++ b/MyPersonalFinance/src/app/register-page/register-page.component.css
@@ -16,3 +16,9 @@
     color: #373636;
     background-color: #F8F7F3;
 }
+
+.disabled-button {
+    background-color: #cccccc; 
+    color: #666666; 
+    cursor: not-allowed;
+  }
