--- a/MyPersonalFinance/src/app/header/header.component.html
+++ b/MyPersonalFinance/src/app/header/header.component.html
@@ -1,11 +1,7 @@
 <header class="header">
-    <div class="logo">
-      <img src="assets/logo1.jpg">
-    </div>
-    <div class="links">
-      <a routerLink="/acoes">Ações</a>
-      <a routerLink="/carteira">Carteira</a>
-      <a (click)="logout()">Logout</a>
-    </div>
-  </header>
-  
+  <div class="links">
+    <a routerLink="/acoes">Ações</a>
+    <a routerLink="/carteira">Carteira</a>
+  </div>
+  <p>works</p>
+</header>
