--- a/MyPersonalFinance/src/app/wallet/wallet.component.html
+++ b/MyPersonalFinance/src/app/wallet/wallet.component.html
@@ -14,6 +14,12 @@
           <p>valor abertura R${{ userStock.averageValue }}</p>
         </div>
       </div>
+
+      <div class="button-container">
+        <button mat-icon-button (click)="openAddStockModal(userWallet)">
+          <mat-icon>add</mat-icon>
+        </button>
+      </div>
     </div>
   </p-card>
 </div>
