fix: removed comments

--- a/MyPersonalFinance/src/app/wallet/wallet.component.html
+++ b/MyPersonalFinance/src/app/wallet/wallet.component.html
@@ -11,10 +11,9 @@
           <h3>{{ userStock.mnemonic }}</h3>
           <p>cotas {{ userStock.shares }}</p>
           <p>valor atual R${{ userStock.currentValue }}</p>
-          <p>valor abertura R${{ userStock.averageValue }}</p>
+          <p>valor medio R${{ userStock.averageValue }}</p>
         </div>
       </div>
-
       <div class="button-container">
         <button mat-icon-button (click)="openAddStockModal(userWallet)">
           <mat-icon>add</mat-icon>
